--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   mask_text_input_formatter: ^2.0.0
   badges: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,6 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/fruits/
