--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,42 @@
 name: quitanda
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
 
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.1
   mask_text_input_formatter: ^2.0.0
   badges: ^2.0.1
   intl: ^0.17.0
+  qr_flutter: ^4.0.0
+  add_to_cart_animation: ^0.0.7
+  fluttertoast: ^8.0.8
+  shimmer: ^2.0.0
+  get: ^4.6.1
+  dio: ^4.0.6
+  json_annotation: ^4.4.0
+  freezed: ^2.0.2
+  freezed_annotation: ^2.0.1
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  json_serializable: ^6.1.6
+  build_runner: ^2.1.10
 
 flutter:
-
   uses-material-design: true
 
   assets:
